fix: major improvements for gaping behavior

--- a/src/03-base/_globalModifiers.scss
+++ b/src/03-base/_globalModifiers.scss
@@ -657,11 +657,17 @@ $directions: top, right, bottom, left;
 			--g: #{$i/3}rem;
 		}
 	}
-	.xm__gapingX-#{$i*5},
+	.xm__gapingX-#{$i*5} {
+		@include extend-viewports-classes {
+			> * {
+				--gx: #{$i/3}rem;
+			}
+		}
+	}
 	.xm__gapingY-#{$i*5} {
 		@include extend-viewports-classes {
 			> * {
-				--g: #{$i/3}rem;
+				--gy: #{$i/3}rem;
 			}
 		}
 	}
@@ -673,11 +679,18 @@ $directions: top, right, bottom, left;
 }
 
 /// item spacing defaults
-[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]) {
+[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
 	/// this is a very special class to omit this specific fix
 	&:not(.unfix__gaping) {
-		margin: -0.1px calc(-1 * var(--g)) calc(-1 * var(--g)) -0.1px;
+		--gc: calc(-1 * var(--g, 1rem)); // calculated gap
+		margin: -0.1px var(--gc) var(--gc) -0.1px;
 		box-sizing: border-box;
+		&:last-child {
+			> :first-child:last-child {
+				// only child, text nodes can break this
+				margin: 0;
+			}
+		}
 	}
 	> :not(br) {
 		&:not([class*="__m"]),
@@ -697,60 +710,80 @@ $directions: top, right, bottom, left;
 		}
 	}
 }
+
 /// X axis
 /// because of the fix is necesary to transfer the margin to the sibling element
-[class*="ngX"] > :not(br):not(:last-child) {
-	/// Gaping
-	&:not([class*="__mR"]) {
-		/// Right
-		&.unfix__gaping,
-		&:not(.xm__gaping):not([class*="__gaping:"]):not([class*="__gaping-"]) {
-			margin-right: var(--g);
-			&:not([class*="__gapi"]) {
-				> :not([class*="__gapi"]) {
-					--g: initial;
+[class*="ngX"]:not([class*="ngX-none"]) {
+	> :not(br):not(:last-child) {
+		/// Gaping
+		&:not([class*="__mR"]) {
+			/// Right
+			&.unfix__gaping,
+			&:not(.xm__gaping):not([class*="__gaping:"]):not([class*="__gaping-"]) {
+				margin-right: var(--gx);
+				// &:not([class*="__gapi"]) {
+				// 	> :not([class*="__gapi"]) {
+				// 		--gx: initial;
+				// 	}
+				// }
+				&[class*="__flx"][class*="-wrap"],
+				&[class*="__flx"][class*="-reverse"],
+				&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+					margin-right: calc(-1 * (var(--g, 1rem) - var(--gx, 1rem)));
 				}
 			}
 		}
-	}
-	&:not(.unfix__gaping)[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"])
-		+ * {
-		/// Gaping
-		margin-left: var(--g);
-		&:not([class*="__gapi"]) {
-			> :not([class*="__gapi"]) {
-				--g: initial;
+		&:not(.unfix__gaping)[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"])
+			+ * {
+			/// Gaping
+			margin-left: var(--gx);
+			&:not([class*="__gapi"]) {
+				> :not([class*="__gapi"]) {
+					--gx: initial;
+				}
 			}
 		}
 	}
 }
 /// Y axis
 /// because of the fix is necesary to transfer the margin to the sibling element
-[class*="ngY"] > :not(br):not(:last-child) {
-	/// Gaping
-	&:not([class*="__mB"]) {
-		/// Bottom
-		&.unfix__gaping,
-		&:not(.xm__gaping):not([class*="__gaping:"]):not([class*="__gaping-"]) {
-			margin-bottom: var(--g);
-			&:not([class*="__gapi"]) {
-				> :not([class*="__gapi"]) {
-					--g: initial;
+[class*="ngY"]:not([class*="ngY-none"]) {
+	> :not(br) {
+		&:not(:last-child) {
+			/// Gaping
+			&:not([class*="__mB"]) {
+				/// Bottom
+				&.unfix__gaping,
+				&:not(.xm__gaping):not([class*="__gaping:"]):not([class*="__gaping-"]) {
+					margin-bottom: var(--gy);
+					// &:not([class*="__gapi"]) {
+					// 	> :not([class*="__gapi"]) {
+					// 		--gy: initial;
+					// 	}
+					// }
+					&[class*="__flx"][class*="-wrap"],
+					&[class*="__flx"][class*="-reverse"],
+					&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+						margin-bottom: calc(
+							-1 * (var(--g, 1rem) - var(--gy, 1rem))
+						);
+					}
+				}
+			}
+			&:not(.unfix__gaping)[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"])
+				+ * {
+				/// Gaping
+				margin-top: var(--gy);
+				&:not([class*="__gapi"]) {
+					> :not([class*="__gapi"]) {
+						--gy: initial;
+					}
 				}
 			}
 		}
 	}
-	&:not(.unfix__gaping)[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"])
-		+ * {
-		/// Gaping
-		margin-top: var(--g);
-		&:not([class*="__gapi"]) {
-			> :not([class*="__gapi"]) {
-				--g: initial;
-			}
-		}
-	}
 }
+
 /// defaults
 .xm__gap,
 .xm__gaping {
@@ -758,12 +791,19 @@ $directions: top, right, bottom, left;
 		--g: 1rem;
 	}
 }
-.xm__gapingX,
+.xm__gapingX {
+	/// X dimension
+	@include extend-viewports-classes {
+		> * {
+			--gx: 1rem;
+		}
+	}
+}
 .xm__gapingY {
 	/// Y dimension
 	@include extend-viewports-classes {
 		> * {
-			--g: 1rem;
+			--gy: 1rem;
 		}
 	}
 }
