--- a/src/05-components/_view.scss
+++ b/src/05-components/_view.scss
@@ -105,7 +105,12 @@ $viewPathEnd: "' fill='%23fff' /%3E%3C/svg%3E%0A";
 		@include flexbox(column, nowrap, center, stretch);
 		> :not([class*="__mB"]):not(:last-child) {
 			/// Bottom
-			margin-bottom: 2rem;
+			margin-bottom: var(--gy, 2rem);
+			&[class*="__flx"][class*="-wrap"],
+			&[class*="__flx"][class*="-reverse"],
+			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+				margin-bottom: calc(-1 * (var(--g) - var(--gy)));
+			}
 		}
 	}
 }
